Changes to make cloud functions and funqy cloud functions work, use proper per-resource; also, proper implementation of test ordering (but tests for that disabled)