@@ -25,47 +25,25 @@ public class CloudFunctionTestResource implements QuarkusTestResourceConfigurabl
 
     @Override
     public Map<String, String> start() {
-        System.out.println("HOLLY >>>>>>>>>> REAL START INVOKER" + invoker);
-
-        Map<String, String> answer = "".equals(functionName) ? Collections.emptyMap()
-                : Map.of(functionType.getFunctionProperty(), functionName);
-
-        return answer;
+        return "".equals(functionName) ? Collections.emptyMap() : Map.of(functionType.getFunctionProperty(), functionName);
     }
 
     @Override
     public void inject(TestInjector testInjector) {
         // This is a hack, we cannot start the invoker in the start() method as Quarkus is not yet initialized,
         // so we start it here as this method is called later (the same for reading the test port).
-
-        System.out.println("HOLLY >>>>>>>>>> ABOUT TO INJECT INVOKER" + invoker);
-
-        // We might call inject several times, since this is an inject, not a start
-        // Starting the same invoker on the same port multiple times is not going to succeed
-        // TODO check if this can safely be moved to start()
-        // TODO check if we can do a stop() + start() instead of skipping it
-
-        if (invoker == null) {
-            int port = ConfigProvider.getConfig()
-                    .getOptionalValue("quarkus.http.test-port", Integer.class)
-                    .orElse(8081);
-
-            this.invoker = new CloudFunctionsInvoker(functionType, port);
-
-            try {
-                this.invoker.start();
-            } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
+        int port = ConfigProvider.getConfig().getOptionalValue("quarkus.http.test-port", Integer.class).orElse(8081);
+        this.invoker = new CloudFunctionsInvoker(functionType, port);
+        try {
+            this.invoker.start();
+        } catch (Exception e) {
+            throw new RuntimeException(e);
         }
-        System.out.println("HOLLY done inject invoker");
-
     }
 
     @Override
     public void stop() {
         try {
-            System.out.println("HOLLY<<<<<<<<<<<<<< STOP INVOKER");
             this.invoker.stop();
         } catch (Exception e) {
             throw new RuntimeException(e);
